@@ -1,8 +1,5 @@
 from jsonasobj.jsonobj import JsonObj, as_dict, as_list, as_json, as_json_obj, get, items, loads, load, setdefault
 from jsonasobj.extendednamespace import ExtendedNamespace
 
-__license__ = 'CC0 1.0 Universal (CC0 1.0) Public Domain Dedication'
-__version__ = '1.4.0'
-
-__all__ = ['JsonObj', 'extendednamespace', 'as_dict', 'as_list', 'as_json', 'as_json_obj', 'get', 'items',
+__all__ = ['JsonObj', 'ExtendedNamespace', 'as_dict', 'as_list', 'as_json', 'as_json_obj', 'get', 'items',
            'load', 'loads', 'setdefault']
